# Projects

./: .detaignore  .gitignore  .php_cs-fixer.dist.php  .spaceignore  ArrayHelper.java  Cargo.toml  CommandLine.java  ExecuteCommand.java  LICENSE  LearnAPI.java  Months.java  Notes.md  OpenFile.java  README.md  ReadFile.java  Spacefile  TermColour.py  Test  TestMe.java  _config.yml  advice.html  babel.config.js  build.sh  checkPorts.js  compoundInterest.js  create.json  debug  debug.js  deno_express.ts  docker-compose.yml  error.js  follower.py  go.mod  hello.ts  igram.py  index.html  index.js  info.js  learning  learning.c  (+21 more)
.github/workflows/: main.yml
2022/Bash/: README.md
2022/Go/: README.md
2022/JavaScript/: README.md
2022/Kotlin/: README.md
2022/Python/: README.md
2023/Day01/: part_one.py  part_two.py
2023/Day02/: one.c
2023/Day13/: Day13.txt
AdventOfCode/: generate_files.sh  generate_text_files.sh
Bash/: Handy_One-liners_for_sed.md  btc_functions.sh  library.sh  test_functions.sh
Bash/Libs/: calculus.sh  functions.json  get_fun.sh  git.sh  json_fun.sh  lib.sh  names.txt  network.sh  notes.sh  rename_functions.sh  tests.sh
Bash/Scripts/: DeveloperCertificate.sh  ZeroLicense.sh  addDotz.sh  bashTCP.sh  checkDNS.sh  colour.sh  debug.sh  editScript.sh  error.sh  genOpenSSLPassword.sh  getBTCPrice.sh  getFilesWithPattern.sh  getTime.sh  get_script_path.sh  get_url.sh  github_email.sh  gnu_full_license.sh  hex.sh  hexColour.sh  replace.sh  replaceInAllFiles.sh  signatures.sh  stripPatternAll.sh  stripPatternOnce.sh  term_colours.sh  update.sh
Bash/Setup/: Setup.sh
Bash/getIP/: README.md  getIP.sh
C/learning/: learning.s
C/rosetta/: x86_64
Calculator/: Calculator.ipynb
Code/C/: c.c
Code/Docker/: Dockerfile
Code/HTML/: Page.html
Code/Java/: Class.java  ScriptJava
Code/Python/: Python.py
Code/Rust/: main.rs
Code/Shell/: bin_sh.sh  env_sh.sh
DeckOfCards/src/: App.java  Card.java  Clubs.java  Controller.java  DeckOfCards.java  Diamonds.java  Hearts.java  Images.java  Rank.java  Spades.java  Suits.java  module-info.java
Deta/Calc/: Spacefile
Deta/FinTech/: Discovery.md
Deta/ncpdocs/: index.js  package-lock.json  package.json
Dockerfile_bases/: Dockerfile.bash  Dockerfile.devcontainer  Dockerfile.lynis  Dockerfile.node-lts  README.md
Dockerstuff/Dockerfile_bases/: Dockerfile.debian  Dockerfile.fedora
Go/http/: go.mod  server.go
Go/vGo/: LICENSE
Java/JavaLearning/: CreateFile.java  Days.java  Log.java
Java/Scripting/: CompoundInterest  Log  LoggingLevels.txt  config  critical  error  info  severe
JavaScript/ScriptFiles/: checkPorts.js  check_ports.ts  compoundInterest.js  critical.js  finance.js  logger.js  showArgs.js  success.js
JavaScript/jsCalc/: index.js  package.json  root.html
JavaScript/jsCalculator/: index.html  index.js
JavaScript/portcheck_js/: index.js  package-lock.json
Licenses/2023/: 0BSD  MIT0
Licenses/Blank/: 0BSD_License.txt
Nextcloud/base/: Dockerfile
Nextcloud/bk/: compose.yml  compose.yml.bk
Nextcloud/ncp/: ReplaceNames.sh  ReplaceNames.txt  newFunctions.sh
Nextcloud/redis/: Dockerfile  config.json  redis.conf
PHP/learn/: test.php
PHP/translate/: .eslintrc.js  .gitattributes  .gitignore  composer.json  package.json  psalm.xml  webpack.config.js
Python/CompoundInterest/: CompoundInterest.py
Python/InstagramFollower/: bkup.txt  go.js  index.php  output.txt
Python/pyFollower/: .gitignore  backup.txt  requirements.txt  server.py
Python/webhook/: main.py  test.pyproject.toml
RISC-V/: README.md  gcc-toolchain.sh  musl-cross-make.sh
RISC-V/GNU-Toolchain/: config.mak
Rust/Dashboard/: package.json  shell.nix
Rust/dev/: Cargo.toml
Rust/dockr_dashboard/: Cargo.toml  v1.42.yaml
Rust/dockr_dashboard/backend/src/: connect.rs  main.rs  types.rs
Rust/dockr_dashboard/backend/src/routes/: format.rs  system.rs
Rust/dockr_dashboard/common/src/: types.rs
Rust/dockr_dashboard/common/src/models/: image.rs  network.rs
Rust/dockr_dashboard/dashboard/: index.html  styles.css.bak
Rust/dockr_dashboard/frontend/: Cargo.toml  index.js
Rust/dockr_dashboard/frontend/src/: lib.rs  router.rs
Rust/dockr_dashboard/frontend/src/components/: aside.rs  image_list.rs
Rust/dockr_dashboard/frontend/src/pages/: home.rs
Rust/dockr_dashboard/src/: connect.rs  lib.rs  main.rs  types.rs
Rust/dockr_dashboard/src/routes/: containers.rs  mod.rs  route.rs  volumes.rs
Rust/gr/: Cargo.toml  test.txt
Rust/ipv4/: Cargo.toml
Rust/rd/: test.txt
Rust/rs_client/: Cargo.toml
Rust/rs_client/src/: handlers.rs  lib.rs
Rust/rs_client/src/models/: container_models.rs  image_models.rs  mod.rs  network_models.rs  volume_models.rs
Rust/rs_client/src/routing/: containers.rs  exec.rs  images.rs  system.rs
Rust/tools/: .gitignore
Rust/zen/: Cargo.toml
Sh/: info_page.sh  see_functions.sh
Sh/learning/: Shell tutorial.md  Shell.md  Wildcards.md  (+1 more)
Templates/: README.md
_data/: menu.yml
_includes/: nav.html  simple-menu.html
_layouts/: default.html
app/: build.gradle
appinfo/: info.xml  routes.php
backend/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
common/src/models/: container.rs  mod.rs  volume.rs
cross-compiler_scripts/: README.md
css/: fma.css
dashboard/: index.html
frontend/: index.html
future-value/: index.py
integers/: go.mod
iteration/: go.mod
js/: scripts.js
page/: notes.md  truth.md
pages/: arc.md  bash.md  code.md  docker.md  git.md  nix.md  notes.md  python.md  technology.md  videos.md
public/: index.html
src/: Finance.java  Months.java  app.html  connect.rs  go.js  handlers.rs  lib.rs  main.rs  main.rs.bak  requests.rs  tabulator.min.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lib/: connect.rs  handlers.rs  lib.rs  requests.rs
src-tauri/src/lib/routes/: containers.rs  exec.rs  format.rs  images.rs  mod.rs  system.rs
static/: styles.css
templates/: main.php  root.html  script.js  some.js
tests/: phpunit.integration.xml  psalm-baseline.xml.license
tools/: makedepend  setupenv.bash
(+484 files in other folders)
