[package]
name = "dockr_dashboard"
version = "0.1.0"
authors = ["Victor-ray, S."]
edition = "2021"
# description = ""
# documentation = ""
# readme = ""
# homepage = ""
# repository = ""
# license = ""
# license-file = ""
# keywords = [""]
# categories = [""]
# workspace = ""
# build = ""
# exclude = [""]
# include = [""]
publish = ["false"]

# [profile.dev]
# opt-level = 0

# [profile.release]
# opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
hyper = { version = "0.14.25", features = ["stream"] }
hyperlocal = "0.8"
reqwasm = "0.5.0"
serde_json = "1.0.94"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
