[package]
name = "common"
authors.workspace = true
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"
base64 = "0.21.0"
reqwasm = "0.5.0"
serde_json = "1.0.94"
serde = { version = "1", features = ["derive"] }
