[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Victor-ray, S."]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["dialog-all", "process-command-api"] }
# hyper = { version = "0.14.25", features = ["stream"] }
# hyperlocal = "0.8"
# base64 = "0.21.0"
bollard = "*"
async-read = "0.0.0"
futures-util = "0.3.29"

[[bin]]
name = "app"
path = "src/main.rs"

#[lib]
#name = "libapp"
#path = "src/lib/lib.rs"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
