[package]
name = "dev"
version = "0.1.0"
edition = "2021"
publish = false

# description = ""
# documentation = ""
# readme = ""
# homepage = ""
# repository = ""
# license = ""
# license-file = ""
# keywords = [""]
# categories = [""]
# workspace = ""
# build = ""
# exclude = [""]
# include = [""]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
# tokio = { version = "1", features = ["full"] }
# mini-redis = "0.4"
