[workspace]
members = [
    "backend",
    "frontend",
    "common",
]
default-members = [
    "backend",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Victor-ray, S."]
# description = ""
# documentation = ""
publish = false

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 3
# opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
