[package]
name = "rs_client"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
serde_json = "1.0.94"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.6.12"
hyperlocal = "0.8"
hyper = { version = "0.14.25", features = ["stream"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
tower-service = "0.3.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.84"
futures-executor = "0.3.21"
reqwasm = "0.5.0"
anyhow = "1.0.70"
