[package]
name = "frontend"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
# yew = "0.20.0"
gloo-net = "0.2"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
serde_json = "1"
serde = {version = "=1.0.126", features = ["derive"] }
yew-router = "0.17.0"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"
common = { version = "0.1.0", path = "../common" }
ybc = "0.2.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Node',
  'Window',
  "MouseEvent",
  "DomRect",
]
